DuPont DevSB/src/objects/pse__Group_Actuals__c.object
<CustomObject>
    <customHelpPage>pse__GroupActualsHelp</customHelpPage>
    <description>Represents rolled-up revenues and costs expressed in the group currency for a particular time period, as well as total hours for the parent group. Groups and time periods have a master-detail relationship with group actuals.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>pse__Time_Period__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group_Head__c</fullName>
        <formula>pse__Group__r.pse__Group_Head__r.FirstName &amp; &quot; &quot; &amp; pse__Group__r.pse__Group_Head__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Group Actuals</relationshipLabel>
        <relationshipName>Group_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>pse__Internal_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Is_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contains true if this record serves to verify the contents of another record</description>
        <label>Is Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Margin__c</fullName>
        <formula>pse__Billings__c + pse__Pass_Through_Billings__c - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Other_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Pass_Through_Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pass-Through Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pre-Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Backlog_Calculated_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Scheduled Backlog Calculated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Milestone__c</fullName>
        <label>Scheduled Milestone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Time__c</fullName>
        <label>Scheduled Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>pse__Time_Period__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period_Type__c</fullName>
        <formula>TEXT(pse__Time_Period__r.pse__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Period Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Group Actuals</relationshipLabel>
        <relationshipName>Group_Actuals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Total_Costs__c</fullName>
        <formula>pse__Internal_Costs__c + pse__External_Costs__c + pse__Expense_Costs__c + pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Unique_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Backlog__c</fullName>
        <label>Unscheduled Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Verified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self-join to store a temporary recalculation of the actuals for verification purposes</description>
        <label>Verified By</label>
        <referenceTo>pse__Group_Actuals__c</referenceTo>
        <relationshipLabel>Group Actuals</relationshipLabel>
        <relationshipName>Group_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Group Actuals</label>
    <nameField>
        <label>Group Actuals For</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Group_Actuals_Currency_Mismatch</fullName>
        <active>true</active>
        <description>A Group Actuals record must have the same currency as its parent Group.</description>
        <errorConditionFormula>AND
(
OR(ISNEW(),ISCHANGED(CurrencyIsoCode)), 
NOT(TEXT(CurrencyIsoCode) = TEXT(pse__Group__r.CurrencyIsoCode))
)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>A Group Actuals record must have the same currency as its parent Group.</errorMessage>
    </validationRules>
</CustomObject>